force-app/main/default/objects/purecloud__PureCloud_Presence_Definition__c/purecloud__PureCloud_Presence_Definition__c.object-meta.xml
<CustomObject>
    <label>Genesys Cloud Presence Definition</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Genesys Cloud Presence Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>