force-app/main/default/objects/purecloud__PureCloud_Presence_Definition__c/fields/purecloud__Id__c.field-meta.xml
<CustomField>
    <fullName>purecloud__Id__c</fullName>
    <label>Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>