force-app/main/default/objects/purecloud__PureCloud_Presence_Definition__c/fields/purecloud__Primary__c.field-meta.xml
<CustomField>
    <fullName>purecloud__Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary</label>
    <type>Checkbox</type>
</CustomField>