force-app/main/default/objects/purecloud__PureCloud_Presence_Definition__c/fields/purecloud__System_Presence__c.field-meta.xml
<CustomField>
    <fullName>purecloud__System_Presence__c</fullName>
    <label>System Presence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>